Website Restructuring With Cards

--- a/_layouts/cards-home-research.html
+++ b/_layouts/cards-home-research.html
@@ -7,7 +7,7 @@ layout: cards-default
   
     <div class="row pack">
 
-        {% for post in site.categories.project %}   
+        {% for post in site.categories.research %}   
             <div class="col-sm-3 card">
                  
                 <div class="panel panel-default">
