--- a/_layouts/cards-default.html
+++ b/_layouts/cards-default.html
@@ -32,16 +32,15 @@ layout: cards-compress
       </div><!-- /.image-wrap -->
     {% endif %}
 
-    <div id="main" role="main" class="container">
-      <div class="row">
-        <div class="col-sm-6 article-author-side">
-          {% include _author-bio.html %}
+    <div id="main" role="main" class="container-fluid">
+        <h1>{{ page.title }}</h1>
+        <div class="row">
+          <div class="col-sm-1"></div>
+          <div class="col-sm-10">
+            {{content}}
+          </div>
+          <div class="col-sm-1"></div>
         </div>
-        <div class="col-sm-6">
-          <h1>{{ page.title }}</h1>
-          {{content}}
-        </div>
-      </div>
     </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
