--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -26,3 +26,5 @@ sitemap: false
 @import "vendor/font-awesome/font-awesome";
 @import "vendor/magnific-popup/magnific-popup";
 //@import "vendor/google/fonts";
+
+.nav_topic { font-size: 30px; text-decoration: none; }
