--- a/_layouts/cards-default.html
+++ b/_layouts/cards-default.html
@@ -31,9 +31,8 @@ layout: cards-compress
       {% endif %}
       </div><!-- /.image-wrap -->
     {% endif %}
-
+    <h1 style="margin-left: 2em">{{ page.title }}</h1>
     <div id="main" role="main" class="container-fluid">
-        <h1>{{ page.title }}</h1>
         <div class="row">
           <div class="col-sm-1"></div>
           <div class="col-sm-10">
